crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__binary_ops-2.snap
---
source: src/lib.rs
expression: "lex(\"a b =\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Eq
  len: 1
