crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__binary_ops-3.snap
---
source: crates/cranexpr-lexer/src/lib.rs
expression: "lex(\"a b >=\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Gte
  len: 2
