crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__binary_ops.snap
---
source: src/lib.rs
expression: "lex(\"d e <\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Lt
  len: 1
