crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__dot.snap
---
source: src/lib.rs
expression: "tokenize(\"x.PlaneStatsAverage\").collect::<Vec<_>>()"
---
- kind: Ident
  len: 1
- kind: Dot
  len: 1
- kind: Ident
  len: 17
