crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__ident.snap
---
source: src/lib.rs
expression: "lex(\"f abs\")"
---
- kind: Ident
  len: 1
- kind: Whitespace
  len: 1
- kind: Ident
  len: 3
