crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__literals-2.snap
---
source: src/lib.rs
expression: "lex(\"0b101\")"
---
- kind:
    Literal:
      kind:
        Int:
          base: Binary
          empty_int: false
      suffix_start: 5
  len: 5
