crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__literals-3.snap
---
source: src/lib.rs
expression: "lex(\"0xABC\")"
---
- kind:
    Literal:
      kind:
        Int:
          base: Hexadecimal
          empty_int: false
      suffix_start: 5
  len: 5
