crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__literals-5.snap
---
source: src/lib.rs
expression: "lex(\"1.0e10\")"
---
- kind:
    Literal:
      kind:
        Float:
          base: Decimal
          empty_exponent: false
      suffix_start: 6
  len: 6
