crates/cranexpr-lexer/src/snapshots/cranexpr_lexer__tests__literals.snap
---
source: src/lib.rs
expression: "lex(\"1234\")"
---
- kind:
    Literal:
      kind:
        Int:
          base: Decimal
          empty_int: false
      suffix_start: 4
  len: 4
